fix: make referal card link not overflow its parent

--- a/src/assets/styles/referal.scss
+++ b/src/assets/styles/referal.scss
@@ -153,6 +153,7 @@
               }
 
               span {
+                overflow-wrap: break-word;
                 font-family: 'Inter';
                 font-style: normal;
                 font-weight: 600;
